--- a/src/main/resources/templates/cerveja/cadastro-cerveja.html
+++ b/src/main/resources/templates/cerveja/cadastro-cerveja.html
@@ -1,6 +1,37 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
+	
+	<head>
+		<meta charset="UTF-8" />
+	</head>
+	
 	<body>
 		<h1>Thymeleaf configurado</h1>
 	</body>
+	
+	<form method="post" th:object="${cerveja}">
+		<span th:text="${#fields.hasAnyErrors()}"></span>
+		
+		<div th:each="erro : ${#fields.detailedErrors()}">
+			<span th:text="${erro.message}"></span>
+		</div>
+		
+		<span th:text="${mensagem}">Erro no formulário</span>
+		<br />
+		
+		<label>Sku</label>
+		<input type="text" id="sku" th:field="*{sku}" />
+		<br />
+		
+		<label>Nome</label>
+		<input type="text" id="nome" th:field="*{nome}" />
+		<br />
+		
+		<label>Descrição</label>
+		<textarea id="descricao" th:field="*{descricao}"></textarea>
+		<br />
+		
+		<input type="submit" name="Salvar" />
+	</form>
 </html>
