--- a/src/main/resources/templates/cerveja/cadastro-cerveja.html
+++ b/src/main/resources/templates/cerveja/cadastro-cerveja.html
@@ -1,218 +1,140 @@
 <!DOCTYPE html>
 <html lang="pt" 
 	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="layout/layout-padrao">
 	
-<head>
-	<meta charset="UTF-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-	<title>Brewer</title>
-
-	<link rel="stylesheet" type="text/css" href="/brewer/layout/stylesheets/vendors.min.css"/>
-	<link rel="stylesheet" type="text/css" href="/brewer/layout/stylesheets/algaworks.min.css"/>
-	<link rel="stylesheet" type="text/css" href="/brewer/layout/stylesheets/application.css"/>
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-</head>
+	<head>
+		<title>Brewer - Cadastro de cerveja</title>
+	</head>
 	
-<body>
-	<div class="aw-layout-page">
-		<nav class="navbar  navbar-fixed-top  navbar-default  js-sticky-reference" id="main-navbar">
+	<section layout:fragment="content">
+		<div class="page-header">
 			<div class="container-fluid">
-				<div class="navbar-header">
-					<a class="navbar-brand  hidden-xs" href="#">
-						<img alt="Brewer" src="/brewer/images/logo.png"/>
-					</a>
-					
-					<ul class="nav  navbar-nav">
-						<li>
-							<a href="#" class="js-sidebar-toggle"><i class="fa  fa-bars"></i></a>
-						</li>
-					</ul>
-				</div>
-				
-				<ul class="nav navbar-nav  navbar-right">
-			      	<li>
-			      		<a href="#"><em class="fa  fa-sign-out"></em></a>
-			      	</li> 
-				</ul>				
+				<h1>
+					Cadastro de cerveja
+				</h1>
 			</div>
-		</nav>
+		</div>
 		
-		<aside class="aw-layout-sidebar  js-sidebar">
-			<div class="aw-layout-sidebar__content">
-				<nav class="aw-menu  js-menu">
-					<ul class="aw-menu__list">
-						<li class="aw-menu__item">
-				        	<a href="dashboard.html"><i class="fa  fa-fw  fa-home"></i><span>Dashboard</span></a>
-				        </li>
-				        
-				        <li class="aw-menu__item  is-active">
-				        	<a href="#">
-				            	<i class="fa  fa-fw  fa-file-text"></i><span>Cadastros</span>
-				            	<i class="aw-menu__navigation-icon  fa"></i>
-				          	</a>
-				      
-				          	<ul class="aw-menu__list  aw-menu__list--sublist">
-				            	<li class="aw-menu__item  aw-menu__item--link"><a href="cadastro-produto.html">Cadastro de produto</a></li>
-				            	<li class="aw-menu__item  aw-menu__item--link  is-active"><a href="pesquisa-produtos.html">Pesquisa de produtos</a></li>
-				            	<li class="aw-menu__item  aw-menu__item--link"><a href="tabela-sem-dados.html">Tabela sem dados</a></li>
-				          	</ul>
-				        </li>
-				        
-				        <li class="aw-menu__item  is-expanded">
-				        	<a href="#">
-				            	<i class="fa  fa-fw  fa-file-text"></i><span>Páginas comuns</span>
-				            	<i class="aw-menu__navigation-icon  fa"></i>
-				          	</a>
-				
-				          	<ul class="aw-menu__list  aw-menu__list--sublist">
-					            <li class="aw-menu__item  aw-menu__item--link"><a href="pagina-vazia.html">Página vazia</a></li>
-					            <li class="aw-menu__item  aw-menu__item--link"><a href="login.html">Login</a></li>
-					            <li class="aw-menu__item  aw-menu__item--link"><a href="esqueceu-a-senha.html">Esqueceu a senha</a></li>
-					            <li class="aw-menu__item  aw-menu__item--link"><a href="403.html">403</a></li>
-					            <li class="aw-menu__item  aw-menu__item--link"><a href="404.html">404</a></li>
-					            <li class="aw-menu__item  aw-menu__item--link"><a href="500.html">500</a></li>
-				        	</ul>
-				        </li>
-					</ul>
-				</nav>
-			</div>
-		</aside>
-		
-		<section class="aw-layout-content  js-content">
-			<div class="page-header">
-				<div class="container-fluid">
-					<h1>
-						Cadastro de cerveja
-					</h1>
-				</div>
-			</div>
+		<div class="container-fluid">
+			<!-- <div class="alert  alert-danger  alert-dismissible" role="alert">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<i class="fa  fa-exclamation-circle"></i> Já existe um produto com o nome informado.
+			</div> -->
 			
-			<div class="container-fluid">
-				<!-- <div class="alert  alert-danger  alert-dismissible" role="alert">
-					<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<i class="fa  fa-exclamation-circle"></i> Já existe um produto com o nome informado.
-				</div> -->
+			<form method="post" th:object="${cerveja}" class="form-vertical  js-form-loading">
+				<div class="row">
+					<div class="col-sm-2">
+						<div class="form-group">
+							<label for="sku">SKU: *</label>
+							<input type="text" id="sku" name="sku" class="form-control" />
+						</div>
+					</div>
+					
+					<div class="col-sm-10">
+						<div class="form-group">
+							<label for="nome">Nome: *</label>
+							<input type="text" id="nome" name="nome" class="form-control" />
+						</div>
+					</div>
+				</div>
 				
-				<form method="post" th:object="${cerveja}" class="form-vertical  js-form-loading">
-					<div class="row">
-						<div class="col-sm-2">
-							<div class="form-group">
-								<label for="sku">SKU *</label>
-								<input type="text" id="sku" name="sku" class="form-control" />
-							</div>
-						</div>
-						
-						<div class="col-sm-10">
-							<div class="form-group">
-								<label for="nome">Nome *</label>
-								<input type="text" id="nome" name="nome" class="form-control" />
-							</div>
-						</div>
-					</div>
-					
-					<div class="form-group">
-						<label for="descricao">Descrição</label>
-						<textarea id="descricao" rows="3" class="form-control"></textarea>
-					</div>
-					
-					<div class="row">
-						<div class="col-sm-3">
-							<div class="form-group">
-								<label for="estilo">Estilo</label>
+				<div class="form-group">
+					<label for="descricao">Descrição:</label>
+					<textarea id="descricao" rows="3" class="form-control"></textarea>
+				</div>
+				
+				<div class="row">
+					<div class="col-sm-3">
+						<div class="form-group">
+							<label for="estilo">Estilo:</label>
+							<div class="bw-field-action">
 								<select id="estilo" class="form-control">
 									<option value="">Selecione o estilo</option>
+									<option th:each="estilo : ${estilos}" th:value="${estilo.codigo}" th:text="${estilo.nome}" />
 								</select>
-							</div>
-						</div>
-						
-						<div class="col-sm-3">
-							<div class="form-group">
-								<label for="sabor">Sabor</label>
-								<select id="sabor" class="form-control">
-									<option value="">Selecione o sabor</option>
-								</select>
-							</div>
-						</div>
-						
-						<div class="col-sm-3">
-							<div class="form-group">
-								<label for="teorAlcoolico">Teor alcoólico</label>
-								<div class="input-group">
-									<input type="text" id="teorAlcoolico" name="teorAlcoolico" class="form-control" />
-									<div class="input-group-addon">%</div>
-								</div>
-							</div>
-						</div>
-						
-						<div class="col-lg-3 col-sm-6">
-							<div class="form-group">
-								<label for="origem">Origem</label>
-								<div>
-									<div class="radio radio-inline">
-										<input type="radio" name="origem" />
-										<label>Nacional</label>	
-									</div>
-									<div class="radio radio-inline">
-										<input type="radio" name="origem" />
-										<label>Internacional</label>	
-									</div>
+								
+								<div class="bw-field-action__icon">
+									<a href="" data-toggle="modal" data-target="#modal-cadastro-rapido-estilo">
+										<i class="glyphicon glyphicon-plus-sign bw-glyphicon-large"></i>
+									</a>
 								</div>
 							</div>
 						</div>
 					</div>
 					
-					<div class="row">
-						<div class="col-sm-3">
-							<div class="form-group">
-								<label for="preco">Preço</label>
-								<div class="input-group">
-									<input type="text" id="preco" name="preco" class="form-control" />
-									<div class="input-group-addon">R$</div>
-								</div>
-							</div>
-						</div>	
-						
-						<div class="col-sm-3">
-							<div class="form-group">
-								<label for="comissao">Comissão</label>
-								<div class="input-group">
-									<input type="text" id="comissao" name="comissao" class="form-control" />
-									<div class="input-group-addon">%</div>
-								</div>
-							</div>
-						</div>	
-						
-						<div class="col-sm-3">
-							<div class="form-group">
-								<label for="estoque">Estoque</label>
-								<input type="text" id="estoque" name="estoque" class="form-control" />
-							</div>
-						</div>	
+					<div class="col-sm-3">
+						<div class="form-group">
+							<label for="sabor">Sabor:</label>
+							<select id="sabor" class="form-control">
+								<option value="">Selecione o sabor</option>
+								<option th:each="sabor : ${sabores}" th:value="${sabor}" th:text="${sabor.descricao}"/>
+							</select>
+						</div>
 					</div>
 					
-					<div class="form-group">
-						<button class="btn  btn-primary" type="submit">Salvar</button>
+					<div class="col-sm-3">
+						<div class="form-group">
+							<label for="teorAlcoolico">Teor alcoólico:</label>
+							<div class="input-group">
+								<input type="text" id="teorAlcoolico" name="teorAlcoolico" class="form-control js-decimal" />
+								<div class="input-group-addon">%</div>
+							</div>
+						</div>
 					</div>
-				</form>
-			</div>	
-		</section>
+					
+					<div class="col-lg-3 col-sm-6">
+						<div class="form-group">
+							<label for="origem">Origem:</label>
+							<div>
+								<th:block th:each="origem : ${origens}">
+									<div class="radio radio-inline">
+										<input th:id="${origem.ordinal(origem.descricao)}" th:value="${origem}"  type="radio" name="origem" />
+										<label th:for="${origem.ordinal(origem.descricao)}" th:text="${origem.descricao}">Nacional</label>	
+									</div>
+								</th:block>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="row">
+					<div class="col-sm-3">
+						<div class="form-group">
+							<label for="preco">Preço:</label>
+							<div class="input-group">
+								<input type="text" id="preco" name="preco" class="form-control js-decimal" />
+								<div class="input-group-addon">R$</div>
+							</div>
+						</div>
+					</div>	
+					
+					<div class="col-sm-3">
+						<div class="form-group">
+							<label for="comissao">Comissão:</label>
+							<div class="input-group">
+								<input type="text" id="comissao" name="comissao" class="form-control js-decimal" />
+								<div class="input-group-addon">%</div>
+							</div>
+						</div>
+					</div>	
+					
+					<div class="col-sm-3">
+						<div class="form-group">
+							<label for="estoque">Estoque:</label>
+							<input type="text" id="estoque" name="estoque" class="form-control js-integer" />
+						</div>
+					</div>	
+				</div>
+				
+				<div class="form-group">
+					<button class="btn  btn-primary" type="submit">Salvar</button>
+				</div>
+			</form>
+		</div>
 		
-		<footer class="aw-layout-footer  js-content">
-			<div class="container-fluid">
-				<span class="aw-footer-disclaimer">&copy; 2016 AlgaWorks. Todos os direitos reservados.</span>
-			</div>
-		</footer>
-	</div>
-	<script src="/brewer/layout/javascripts/vendors.min.js"></script>
-	<script src="/brewer/layout/javascripts/algaworks.min.js"></script>
-</body>
+		<div th:replace="extras/cadastro-rapido-estilo :: modal"></div>	
+	</section>
 </html>
