--- a/src/main/resources/templates/cerveja/cadastro-cerveja.html
+++ b/src/main/resources/templates/cerveja/cadastro-cerveja.html
@@ -3,6 +3,7 @@
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:brewer="http://www.brewer.org"
 	layout:decorator="layout/layout-padrao">
 	
 	<head>
@@ -19,39 +20,41 @@
 		</div>
 		
 		<div class="container-fluid">
-			<!-- <div class="alert  alert-danger  alert-dismissible" role="alert">
-				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<i class="fa  fa-exclamation-circle"></i> Já existe um produto com o nome informado.
-			</div> -->
-			
 			<form method="post" th:object="${cerveja}" class="form-vertical  js-form-loading">
+				
+				<brewer:message  />
+				
 				<div class="row">
-					<div class="col-sm-2">
+					<div class="col-sm-2" brewer:haserror="sku">
 						<div class="form-group">
-							<label for="sku">SKU: *</label>
-							<input type="text" id="sku" name="sku" class="form-control" />
+							<label for="sku" class="control-label">SKU: *</label>
+							<input type="text" th:field="*{sku}" id="sku" name="sku" class="form-control" />
 						</div>
 					</div>
 					
-					<div class="col-sm-10">
+					<div class="col-sm-10" brewer:haserror="nome">
 						<div class="form-group">
-							<label for="nome">Nome: *</label>
-							<input type="text" id="nome" name="nome" class="form-control" />
+							<label for="nome" class="control-label">Nome: *</label>
+							<input type="text" th:field="*{nome}" id="nome" name="nome" class="form-control" />
 						</div>
 					</div>
 				</div>
 				
-				<div class="form-group">
-					<label for="descricao">Descrição:</label>
-					<textarea id="descricao" rows="3" class="form-control"></textarea>
+				<div class="row">
+					<div class="col-sm-12" brewer:haserror="descricao">
+						<div class="form-group">
+							<label for="descricao" class="control-label">Descrição:</label>
+							<textarea th:field="*{descricao}" id="descricao" rows="3" class="form-control"></textarea>
+						</div>
+					</div>
 				</div>
 				
 				<div class="row">
-					<div class="col-sm-3">
+					<div class="col-sm-3" brewer:haserror="estilo">
 						<div class="form-group">
-							<label for="estilo">Estilo:</label>
+							<label for="estilo" class="control-label">Estilo:</label>
 							<div class="bw-field-action">
-								<select id="estilo" class="form-control">
+								<select th:field="*{estilo}" id="estilo" class="form-control">
 									<option value="">Selecione o estilo</option>
 									<option th:each="estilo : ${estilos}" th:value="${estilo.codigo}" th:text="${estilo.nome}" />
 								</select>
@@ -65,33 +68,33 @@
 						</div>
 					</div>
 					
-					<div class="col-sm-3">
+					<div class="col-sm-3" brewer:haserror="sabor">
 						<div class="form-group">
-							<label for="sabor">Sabor:</label>
-							<select id="sabor" class="form-control">
+							<label for="sabor" class="control-label">Sabor:</label>
+							<select th:field="*{sabor}" id="sabor" class="form-control">
 								<option value="">Selecione o sabor</option>
 								<option th:each="sabor : ${sabores}" th:value="${sabor}" th:text="${sabor.descricao}"/>
 							</select>
 						</div>
 					</div>
 					
-					<div class="col-sm-3">
+					<div class="col-sm-3" brewer:haserror="teorAlcoolico">
 						<div class="form-group">
-							<label for="teorAlcoolico">Teor alcoólico:</label>
+							<label for="teorAlcoolico" class="control-label">Teor alcoólico:</label>
 							<div class="input-group">
-								<input type="text" id="teorAlcoolico" name="teorAlcoolico" class="form-control js-decimal" />
+								<input type="text" th:field="*{teorAlcoolico}" id="teorAlcoolico" name="teorAlcoolico" class="form-control js-decimal" />
 								<div class="input-group-addon">%</div>
 							</div>
 						</div>
 					</div>
 					
-					<div class="col-lg-3 col-sm-6">
+					<div class="col-lg-3 col-sm-6" brewer:haserror="origem">
 						<div class="form-group">
-							<label for="origem">Origem:</label>
+							<label for="origem" class="control-label">Origem:</label>
 							<div>
 								<th:block th:each="origem : ${origens}">
 									<div class="radio radio-inline">
-										<input th:id="${origem.ordinal(origem.descricao)}" th:value="${origem}"  type="radio" name="origem" />
+										<input th:field="*{origem}" th:id="${origem.ordinal(origem.descricao)}" th:value="${origem}"  type="radio" name="origem" />
 										<label th:for="${origem.ordinal(origem.descricao)}" th:text="${origem.descricao}">Nacional</label>	
 									</div>
 								</th:block>
@@ -101,32 +104,49 @@
 				</div>
 				
 				<div class="row">
-					<div class="col-sm-3">
+					<div class="col-sm-3" brewer:haserror="valor">
 						<div class="form-group">
-							<label for="preco">Preço:</label>
+							<label for="valor" class="control-label">Valor:</label>
 							<div class="input-group">
-								<input type="text" id="preco" name="preco" class="form-control js-decimal" />
+								<input th:field="*{valor}" type="text" id="valor" name="valor" class="form-control js-decimal" />
 								<div class="input-group-addon">R$</div>
 							</div>
 						</div>
 					</div>	
 					
-					<div class="col-sm-3">
+					<div class="col-sm-3" brewer:haserror="comissao">
 						<div class="form-group">
-							<label for="comissao">Comissão:</label>
+							<label for="comissao" class="control-label">Comissão:</label>
 							<div class="input-group">
-								<input type="text" id="comissao" name="comissao" class="form-control js-decimal" />
+								<input th:field="*{comissao}" type="text" id="comissao" name="comissao" class="form-control js-decimal" />
 								<div class="input-group-addon">%</div>
 							</div>
 						</div>
 					</div>	
 					
-					<div class="col-sm-3">
+					<div class="col-sm-3" brewer:haserror="quantidadeEstoque">
 						<div class="form-group">
-							<label for="estoque">Estoque:</label>
-							<input type="text" id="estoque" name="estoque" class="form-control js-integer" />
+							<label for="estoque" class="control-label">Estoque:</label>
+							<input th:field="*{quantidadeEstoque}" type="text" id="estoque" name="estoque" class="form-control js-integer" />
 						</div>
 					</div>	
+				</div>
+				
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="form-group">
+							<input type="hidden" th:field="*{foto}" />
+							<input type="hidden" th:field="*{contentType}" />
+							
+							<label class="control-label">Foto:</label>
+							
+							<div class="bw-upload js-upload">
+								<i class="glyphicon glyphicon-cloud-upload"></i>
+								<span>Arraste a foto aqui ou </span>
+								<a class="bw-upload-form-file">selecione <input type="file" accept=".jpg, .png, .jpeg" /> </a>
+							</div>
+						</div>
+					</div>
 				</div>
 				
 				<div class="form-group">
@@ -137,4 +157,23 @@
 		
 		<div th:replace="extras/cadastro-rapido-estilo :: modal"></div>	
 	</section>
+	
+	<th:block layout:fragment="javascript-extra">
+		<script th:src="@{/javascripts/estilo.cadastro-rapido.js}"></script>
+		
+		<script>
+			$(function() {
+				 UIkit.upload('.js-upload', {
+					type: 'json',
+					filelimit: 1,
+					allow: '*.(jpg|jpeg|png)',
+					url: '/brewer/fotos',
+					complete: function(resposta) {
+						$('input[name=foto]').val(resposta.response.nome);
+						$('input[name=contentType]').val(resposta.response.contentType);
+					}
+				 });
+			});
+		</script>
+	</th:block>
 </html>
