--- a/src/main/resources/templates/estilo/cadastro-estilo.html
+++ b/src/main/resources/templates/estilo/cadastro-estilo.html
@@ -19,17 +19,16 @@
 		</div>
 		
 		<div class="container-fluid">
-			<!-- <div class="alert  alert-danger  alert-dismissible" role="alert">
-				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<i class="fa  fa-exclamation-circle"></i> Já existe um produto com o nome informado.
-			</div> -->
-			
-			<form method="post" th:object="${cerveja}" class="form-vertical  js-form-loading">
+			<form method="post" th:object="${estilo}" class="form-vertical  js-form-loading">
+				
+				<th:block th:include="layout/fragments/mensagem-sucesso"></th:block>				
+				<th:block th:include="layout/fragments/mensagem-erro-validacao"></th:block>
+				
 				<div class="row">
-					<div class="col-sm-12">
+					<div class="col-sm-12" th:classappend="${#fields.hasErrors('nome')} ? has-error">
 						<div class="form-group">
-							<label for="nome">Nome:</label>
-							<input type="text" class="form-control" id="nome" autofocus="autofocus" />
+							<label for="nome" class="control-label">Nome:</label>
+							<input type="text" class="form-control" id="nome" th:field="*{nome}" autofocus="autofocus" />
 						</div>
 					</div>
 				</div>
