--- a/src/main/resources/templates/extras/cadastro-rapido-estilo.html
+++ b/src/main/resources/templates/extras/cadastro-rapido-estilo.html
@@ -13,18 +13,21 @@
 				</div>
 				
 				<div class="modal-body">
-					<form class="form-horizontal">
+				
+					<div class="alert alert-danger hidden js-error-message" role="alert" ></div>
+					
+					<form class="form-horizontal" th:action="@{/estilos}">
 						<div class="form-group">
 							<label class="col-sm-2 control-label" for="nome-estilo">Nome:</label>
 							<div class="col-sm-10">
-								<input type="text" id="nome-estilo" class="form-control" autofocus="autofocus" />
+								<input type="text" id="nome-estilo" class="form-control" />
 							</div>
 						</div>
 					</form>
 				</div>
 				
 				<div class="modal-footer">
-					<button type="button" class="btn btn-primary">Salvar</button>
+					<button type="button" class="btn btn-primary js-btn-salvar">Salvar</button>
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
 				</div>
 			</div>
