--- a/src/main/resources/templates/layout/layout-padrao.html
+++ b/src/main/resources/templates/layout/layout-padrao.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/vendors.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/algaworks.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/application.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/stylesheets/vendors/uikit.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/stylesheets/brewer.css}"/>
 	
 	<link rel="shortcurt icon" th:href="@{/images/favicon.png}" />
@@ -39,6 +40,8 @@
 	<script th:src="@{/layout/javascripts/vendors.min.js}"></script>
 	<script th:src="@{/layout/javascripts/algaworks.min.js}"></script>
 	<script th:src="@{/javascripts/vendors/jquery.maskMoney.min.js}"></script>
+	<script th:src="@{/javascripts/vendors/uikit.min.js}"></script>
+	<script th:src="@{/javascripts/vendors/uikit-icons.min.js}"></script>
 	<script th:src="@{/javascripts/brewer.js}"></script>
 	<th:block layout:fragment="javascript-extra"></th:block>
 </body>
