--- a/src/main/resources/templates/layout/fragments/barra-navegacao.html
+++ b/src/main/resources/templates/layout/fragments/barra-navegacao.html
@@ -18,7 +18,7 @@
 			
 			<ul class="nav navbar-nav  navbar-right">
 		      	<li>
-		      		<a href="#"><em class="fa  fa-sign-out"></em></a>
+		      		<a href="#"><span class="fa  fa-sign-out"></span></a>
 		      	</li> 
 			</ul>				
 		</div>
