--- a/src/main/resources/static/stylesheets/brewer.css
+++ b/src/main/resources/static/stylesheets/brewer.css
@@ -8,6 +8,15 @@
 	font-size: 18px;
 }
 
+span.thumbnail:hover {
+	border: 1px solid #307cfb;
+	cursor: pointer;
+}
+
+label.bw-required:after {
+	content: " * "
+}
+
 /**
 	Componentes
 **/
@@ -49,4 +58,52 @@
 	cursor: pointer;
 	
 	font-size: 500px;
+}
+
+/** Tabela Simples **/
+.bw-tabela-simples {
+	margin-top: 15px;	
+}
+
+.bw-tabela-simples table tr th {
+	border-bottom-width: 1px; 
+}
+
+.bw-tabela-simples table tr td {
+	border-top: none;
+	border-bottom: 1px solid #e7eaec;
+	padding: 10px;
+	vertical-align: middle;
+}
+
+/** Paginas do Sistema **/
+.table-cervejas-col-foto {
+	min-width: 50px;
+	width: 50px;	
+}
+
+.table-cervejas-col-sku {
+	width: 90px;
+	text-align: center;
+}
+
+.table-cervejas-col-nome {
+	
+}
+
+.table-cervejas-col-estilo {
+	width: 120px;
+}
+
+.table-cervejas-col-origem {
+	width: 100px;
+}
+
+.table-cervejas-col-valor {
+	width: 100px;
+	text-align: right;
+}
+
+.table-cervejas-col-acoes {
+	width: 80px;
 }
