--- a/src/main/resources/templates/estilo/cadastro-estilo.html
+++ b/src/main/resources/templates/estilo/cadastro-estilo.html
@@ -27,7 +27,7 @@
 				<div class="row">
 					<div class="col-sm-12" th:classappend="${#fields.hasErrors('nome')} ? has-error">
 						<div class="form-group">
-							<label for="nome" class="control-label">Nome:</label>
+							<label for="nome" class="control-label bw-required">Nome:</label>
 							<input type="text" class="form-control" id="nome" th:field="*{nome}" autofocus="autofocus" />
 						</div>
 					</div>
