--- a/src/main/resources/templates/cerveja/pesquisa-cerveja.html
+++ b/src/main/resources/templates/cerveja/pesquisa-cerveja.html
@@ -110,17 +110,23 @@
 					<thead>
 						<tr>
 							<th class="table-cervejas-col-foto"></th>
-							<th class="table-cervejas-col-sku">SKU</th>
-							<th class="table-cervejas-col-nome">Nome</th>
+							<th class="table-cervejas-col-sku">
+								<brewer:order page="pagina" field="sku" text="SKU" />
+							</th>
+							<th class="table-cervejas-col-nome">
+								<brewer:order page="pagina" field="nome" text="Nome" />
+							</th>
 							<th class="table-cervejas-col-estilo">Estilo</th>
 							<th class="table-cervejas-col-origem">Origem</th>
-							<th class="table-cervejas-col-valor">Valor</th>
-							<th class="table-cervejas-col-acoes">Açoes</th>
+							<th class="table-cervejas-col-valor">
+								<brewer:order page="pagina" field="valor" text="Valor" />
+							</th>
+							<th class="table-cervejas-col-acoes"></th>
 						</tr>
 					</thead>
 					
 					<tbody>
-						<tr th:each="cerveja : ${cervejas}">
+						<tr th:each="cerveja : ${pagina.content}">
 							<td class="text-center">
 								<img th:src="@{/fotos/thumbnail.{foto}(foto=${cerveja.fotoOuMock})}" class="img-responsive"></img>
 							</td>
@@ -128,7 +134,11 @@
 							<td th:text="${cerveja.nome}"></td>
 							<td th:text="${cerveja.estilo.nome}"></td>
 							<td th:text="${cerveja.origem.descricao}"></td>
-							<td th:text="|R$ ${{cerveja.valor}}|" class="text-right"></td>
+							<!-- <td th:text="|R$ ${{cerveja.valor}}|" class="text-right"></td> -->
+							<td>
+								<span class="bw-text-left">R$</span>
+								<span class="bw-text-right" th:text="${{cerveja.valor}}">0,00</span>
+							</td>
 							<td class="text-center">
 								<a class="btn btn-link btn-xs" title="Editar">
 									<i class="glyphicon glyphicon-pencil"></i>
@@ -140,12 +150,14 @@
 							</td>
 						</tr>
 						
-						<tr th:if="${#lists.isEmpty(cervejas)}">
+						<tr th:if="${pagina.empty}">
 							<td colspan="7">Nenhuma cerveja encontrada</td>
 						</tr>
 					</tbody>
 				</table>
 			</div>
+			
+			<brewer:paginator page="pagina" />
 		</div>
 	</section>
 </html>
