--- a/src/main/resources/templates/cliente/cadastro-cliente.html
+++ b/src/main/resources/templates/cliente/cadastro-cliente.html
@@ -64,7 +64,7 @@
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label>Telefone:</label>
-							<input type="text" class="form-control" />
+							<input type="text" class="form-control js-phone-mask" />
 						</div>
 					</div>
 					
