--- a/src/main/resources/templates/cliente/cadastro-cliente.html
+++ b/src/main/resources/templates/cliente/cadastro-cliente.html
@@ -111,6 +111,9 @@
 							<label for="estado">Estado:</label>
 							<select id="estado" class="form-control">
 								<option value="">Selecione o estado</option>
+								<th:block th:each="estado : ${estados}">
+									<option th:value=${estado.codigo} th:text="${estado.nome}" ></option>
+								</th:block>
 							</select>
 						</div>
 					</div>
@@ -118,9 +121,15 @@
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label for="cidade">Cidade:</label>
-							<select id="cidade" class="form-control">
-								<option value="">Selecione a cidade</option>
-							</select>
+							<div class="bw-field-action">
+								<select id="cidade" class="form-control" data:url="@{/cidades}" disabled="disabled">
+									<option value="">Selecione a cidade</option>
+								</select>
+								
+								<div class="bw-field-action__icon js-loading" style="display: none">
+									<img th:src="@{/images/mini-loading.gif }" />
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -134,5 +143,6 @@
 	
 	<th:block layout:fragment="javascript-extra">
 		<script th:src="@{/javascripts/cliente.mask-cpf-cnpj.js}"></script>
+		<script th:src="@{/javascripts/cliente.carrega-combo-cidade.js}"></script>
 	</th:block>
 </html>
