--- a/src/main/resources/templates/cliente/cadastro-cliente.html
+++ b/src/main/resources/templates/cliente/cadastro-cliente.html
@@ -4,6 +4,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	xmlns:data="http://www.thymeleaf.org/extras/data"
+	xmlns:brewer="http://www.brewer.org"
 	layout:decorator="layout/layout-padrao">
 	
 	<head>
@@ -25,15 +26,19 @@
 				<i class="fa  fa-exclamation-circle"></i> Já existe um produto com o nome informado.
 			</div> -->
 			
-			<form method="post" th:object="${cerveja}" class="form-vertical  js-form-loading">
+			<form method="post" th:object="${cliente}" class="form-vertical  js-form-loading">
+				
+				<brewer:message  />
+				
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-4 bw-required" brewer:haserror="tipoPessoa">
 						<div class="form-group">
-							<label>Tipo pessoa:</label>
+							<label class="control-label">Tipo pessoa:</label>
 							<div>
 								<th:block th:each="tipoPessoa : ${tiposPessoa}">
 									<div class="radio radio-inline">
-										<input th:id="${tipoPessoa.forString(tipoPessoa.descricao)}" type="radio" name="tipoPessoa" class="js-radio-tipo-pessoa" 
+										<input th:id="${tipoPessoa.forString(tipoPessoa.descricao)}"
+											th:field="*{tipoPessoa}" th:value="${tipoPessoa}" type="radio" name="tipoPessoa" class="js-radio-tipo-pessoa" 
 											data:document=${tipoPessoa.tipoPessoa} data:mascara=${tipoPessoa.mascara} />
 										<label th:for="${tipoPessoa.forString(tipoPessoa.descricao)}" th:text="${tipoPessoa.descricao}"></label>
 									</div>
@@ -44,17 +49,17 @@
 				</div>
 				
 				<div class="row">
-					<div class="col-sm-8">
+					<div class="col-sm-8" brewer:haserror="nome">
 						<div class="form-group">
-							<label for="nome">Nome:</label>
-							<input type="text" class="form-control" id="nome" autofocus="autofocus" />
+							<label for="nome" class="control-label bw-required">Nome:</label>
+							<input type="text" class="form-control" id="nome" th:field="*{nome}" autofocus="autofocus" />
 						</div>
 					</div>
 					
-					<div class="col-sm-4">
+					<div class="col-sm-4" brewer:haserror="cpfCnpj">
 						<div class="form-group">
-							<label for="cpfCnpj">CPF/CNPJ:</label>
-							<input id="cpfCnpj" type="text" class="form-control" disabled />
+							<label for="cpfCnpj" class="control-label bw-required">CPF/CNPJ:</label>
+							<input id="cpfCnpj" type="text" th:field="*{cpfCnpj}" class="form-control" disabled />
 						</div>
 					</div>
 				</div>
@@ -63,14 +68,14 @@
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label>Telefone:</label>
-							<input type="text" class="form-control js-phone-mask" />
+							<input type="text" th:field="*{telefone}" class="form-control js-phone-mask" />
 						</div>
 					</div>
 					
 					<div class="col-sm-8">
-						<div class="form-group">
-							<label>Email:</label>
-							<input type="text" class="form-control" />
+						<div class="form-group" brewer:haserror="email">
+							<label class="control-label bw-required">Email:</label>
+							<input type="text" class="form-control" th:field="*{email}" />
 						</div>
 					</div>
 				</div>
@@ -79,21 +84,21 @@
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label>Logradouro:</label>
-							<input type="text" class="form-control" />
+							<input type="text" class="form-control" th:field="*{endereco.logradouro}" />
 						</div>
 					</div>
 					
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label>Número:</label>
-							<input type="text" class="form-control" />
+							<input type="text" class="form-control" th:field="*{endereco.numero}" />
 						</div>
 					</div>
 					
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label>Complemento:</label>
-							<input type="text" class="form-control" />
+							<input type="text" class="form-control" th:field="*{endereco.complemento}" />
 						</div>
 					</div>
 				</div>
@@ -102,14 +107,14 @@
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label>Cep:</label>
-							<input type="text" class="form-control js-cep-mask" data-mascara="00.000-000" />
+							<input type="text" class="form-control js-cep-mask" data-mascara="00.000-000" th:field="*{endereco.cep}" />
 						</div>
 					</div>
 					
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label for="estado">Estado:</label>
-							<select id="estado" class="form-control">
+							<select id="estado" class="form-control" th:field="*{endereco.estado}">
 								<option value="">Selecione o estado</option>
 								<th:block th:each="estado : ${estados}">
 									<option th:value=${estado.codigo} th:text="${estado.nome}" ></option>
@@ -122,8 +127,8 @@
 						<div class="form-group">
 							<label for="cidade">Cidade:</label>
 							<div class="bw-field-action">
-								<select id="cidade" class="form-control" data:url="@{/cidades}" disabled="disabled">
-									<option value="">Selecione a cidade</option>
+								<input type="hidden" id="inputHiddenCidadeSelecionada" th:value="*{endereco.cidade} != null ? *{endereco.cidade.codigo}" />
+								<select id="cidade" class="form-control" data:url="@{/cidades}" th:field="*{endereco.cidade}" disabled="disabled">
 								</select>
 								
 								<div class="bw-field-action__icon js-loading" style="display: none">
