--- a/src/main/resources/templates/cidade/cadastro-cidade.html
+++ b/src/main/resources/templates/cidade/cadastro-cidade.html
@@ -2,6 +2,7 @@
 <html lang="pt" 
 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
+	xmlns:brewer="http://www.brewer.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="layout/layout-padrao">
 	
@@ -12,9 +13,19 @@
 	<section layout:fragment="content">
 		<div class="page-header">
 			<div class="container-fluid">
-				<h1>
-					Cadastro de cidade
-				</h1>
+				<div class="row">
+					<div class="col-sm-10">
+						<h1> Cadastro de cidades </h1>					
+					</div>
+					
+					<div class="col-sm-2">
+						<div class="aw-page-header-controls">
+							<a class="btn btn-default" th:href="@{/cidades}">
+								<i class="glyphicon glyphicon-plus-sign" ></i> <span class="hidden-xs hidden-sm">Pesquisar</span>
+							</a>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		
@@ -24,21 +35,28 @@
 				<i class="fa  fa-exclamation-circle"></i> Já existe um produto com o nome informado.
 			</div> -->
 			
-			<form method="post" th:object="${cerveja}" class="form-vertical  js-form-loading">
+			<form method="post" th:object="${cidade}" class="form-vertical  js-form-loading">
+				
+				<brewer:message  />
+				
 				<div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-4" brewer:haserror="estado">
 						<div class="form-group">
-							<label for="nome">Estado:</label>
-							<select id="estado" class="form-control">
+							<label for="nome" class="control-label bw-required">Estado:</label>
+							<select id="estado" class="form-control" th:field="*{estado}">
 								<option value="">Selecione o estado</option>
+								
+								<th:block th:each="estado : ${estados}">
+									<option th:value="${estado.codigo}" th:text="${estado.nome}"></option>
+								</th:block>
 							</select>
 						</div>
 					</div>
 					
-					<div class="col-sm-8">
+					<div class="col-sm-8" brewer:haserror="nome">
 						<div class="form-group">
-							<label>Nome:</label>
-							<input type="text" class="form-control" />
+							<label class="control-label bw-required">Nome:</label>
+							<input type="text" class="form-control" th:field="*{nome}" />
 						</div>
 					</div>
 				</div>
