--- a/src/main/resources/templates/layout/layout-padrao.html
+++ b/src/main/resources/templates/layout/layout-padrao.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/algaworks.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/application.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/stylesheets/vendors/uikit.min.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/stylesheets/vendors/bootstrap-datepicker.min.css}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/stylesheets/brewer.css}"/>
 	
 	<link rel="shortcurt icon" th:href="@{/images/favicon.png}" />
@@ -43,6 +44,8 @@
 	<script th:src="@{/javascripts/vendors/uikit.min.js}"></script>
 	<script th:src="@{/javascripts/vendors/uikit-icons.min.js}"></script>
 	<script th:src="@{/javascripts/vendors/jquery.mask.min.js}"></script>
+	<script th:src="@{/javascripts/vendors/bootstrap-datepicker.min.js}"></script>
+	<script th:src="@{/javascripts/vendors/bootstrap-datepicker.pt-BR.min.js}"></script>
 	<script th:src="@{/javascripts/brewer.js}"></script>
 	<th:block layout:fragment="javascript-extra"></th:block>
 </body>
