--- a/src/main/resources/templates/cerveja/cadastro-cerveja.html
+++ b/src/main/resources/templates/cerveja/cadastro-cerveja.html
@@ -30,7 +30,7 @@
 		</div>
 		
 		<div class="container-fluid">
-			<form method="post" th:object="${cerveja}" class="form-vertical  js-form-loading">
+			<form method="post" th:object="${cerveja}" th:action="@{/cervejas/novo}" class="form-vertical  js-form-loading">
 				
 				<brewer:message  />
 				
