--- a/src/main/resources/templates/cidade/cadastro-cidade.html
+++ b/src/main/resources/templates/cidade/cadastro-cidade.html
@@ -35,7 +35,7 @@
 				<i class="fa  fa-exclamation-circle"></i> Já existe um produto com o nome informado.
 			</div> -->
 			
-			<form method="post" th:object="${cidade}" class="form-vertical  js-form-loading">
+			<form method="post" th:object="${cidade}" th:action="@{/cidades/nova}" class="form-vertical  js-form-loading">
 				
 				<brewer:message  />
 				
