--- a/src/main/resources/templates/layout/layout-padrao.html
+++ b/src/main/resources/templates/layout/layout-padrao.html
@@ -28,6 +28,8 @@
 </head>
 
 <body>
+	<input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+	<input type="hidden" name="_csrf_header" th:value="${_csrf.headerName}" />
 	<div class="aw-layout-page">
 		
 		<nav th:replace="layout/fragments/barra-navegacao :: navbar"></nav>
