--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
   	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 
- 	<title>AlgaWorks</title>
+ 	<title>Brewer</title>
 
  	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/vendors.min.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/layout/stylesheets/algaworks.min.css}"/>
@@ -22,36 +22,34 @@
 
 <body class="aw-layout-simple-page">
   <div class="aw-layout-simple-page__container">
-
-<form method="post" th:action=@{/login} >
-	<div class="aw-simple-panel">
-		<img alt="AlgaWorks" th:src="@{/images/logo-gray.png}"/>
-		
-		<div class="aw-simple-panel__message">
-			Por favor, faça o login.
-		</div>
-		
-		<div class="aw-simple-panel__message is-error" th:if="${#bools.isTrue(param.error)}">
-			Email e/ou senha não conferem.
-		</div>
-		
-		<div class="aw-simple-panel__box">
-			<div class="form-group  has-feedback">
-				<input type="text" class="form-control  input-lg" name="username" placeholder="Seu e-mail" autofocus="autofocus" />
-				<span class="glyphicon  glyphicon-envelope  form-control-feedback" aria-hidden="true"></span>
+	<form method="post" th:action=@{/login} >
+		<div class="aw-simple-panel">
+			<img alt="AlgaWorks" th:src="@{/images/logo-gray.png}"/>
+			
+			<div class="aw-simple-panel__message">
+				Por favor, faça o login.
 			</div>
 			
-			<div class="form-group  has-feedback">
-				<input type="password" class="form-control  input-lg" name="password" placeholder="Sua senha"/>
-				<span class="glyphicon  glyphicon-lock  form-control-feedback" aria-hidden="true"></span>
+			<div class="aw-simple-panel__message is-error" th:if="${#bools.isTrue(param.error)}">
+				Email e/ou senha não conferem.
 			</div>
-			<div class="form-group">
-				<button type="submit" class="btn  btn-primary  btn-lg  aw-btn-full-width">Entrar</button>
+			
+			<div class="aw-simple-panel__box">
+				<div class="form-group  has-feedback">
+					<input type="text" class="form-control  input-lg" name="username" placeholder="Seu e-mail" autofocus="autofocus" />
+					<span class="glyphicon  glyphicon-envelope  form-control-feedback" aria-hidden="true"></span>
+				</div>
+				
+				<div class="form-group  has-feedback">
+					<input type="password" class="form-control  input-lg" name="password" placeholder="Sua senha"/>
+					<span class="glyphicon  glyphicon-lock  form-control-feedback" aria-hidden="true"></span>
+				</div>
+				<div class="form-group">
+					<button type="submit" class="btn  btn-primary  btn-lg  aw-btn-full-width">Entrar</button>
+				</div>
 			</div>
 		</div>
-	</div>
-</form>
-
+	</form>
   </div>
 
   	<script th:src="@{/layout/javascripts/vendors.min.js}"></script>
