--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -3,18 +3,18 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="layout/layout-simples">
-
+	
 	<th:block layout:fragment="content">
 		<div class="aw-error-panel">
 			<h1 class="aw-error-panel__code">
-				<i class="fa  fa-lock"></i>403
+				<i class="fa  fa-location-arrow"></i> 404
 			</h1>
 	
-			<h2 class="aw-error-panel__title">Acesso negado</h2>
+			<h2 class="aw-error-panel__title">Página não encontrada</h2>
 	
 			<div class="aw-error-panel__description">
-				Desculpe, você não está autorizado a acessar a página que solicitou.
-				Se você acha que isso é um engano, entre em contato com a gente.
+				Desculpe, a página que você tentou acessar não foi encontrada ou não existe.
+				Verifique se a URL está correta ou entre em contato com o administrador do sistema.
 				<br/><br/>
 				<a href="javascript:history.back()" class="btn  btn-primary">Voltar para onde estava</a>
 			</div>
