--- a/src/main/resources/templates/cerveja/cadastro-cerveja.html
+++ b/src/main/resources/templates/cerveja/cadastro-cerveja.html
@@ -4,6 +4,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	xmlns:brewer="http://www.brewer.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
 	layout:decorator="layout/layout-padrao">
 	
 	<head>
