implementacao multiselecao tela de pesquisa usuario

--- a/src/main/resources/static/stylesheets/brewer.css
+++ b/src/main/resources/static/stylesheets/brewer.css
@@ -103,6 +103,12 @@ label.bw-required:after {
 	text-align: center;
 }
 
+/* .table-usuarios-col-nome,
+.table-usuarios-col-email {
+	width: 220px;
+	text-align: left;
+} */
+
 .table-cervejas-col-estilo,
 .table-clientes-col-tipoPessoa {
 	width: 120px;
