--- a/src/main/resources/templates/layout/layout-padrao.html
+++ b/src/main/resources/templates/layout/layout-padrao.html
@@ -48,6 +48,7 @@
 	<script th:src="@{/javascripts/vendors/jquery.mask.min.js}"></script>
 	<script th:src="@{/javascripts/vendors/bootstrap-datepicker.min.js}"></script>
 	<script th:src="@{/javascripts/vendors/bootstrap-datepicker.pt-BR.min.js}"></script>
+	<script th:src="@{/javascripts/multi-selecao.js}"></script>
 	<script th:src="@{/javascripts/brewer.js}"></script>
 	<th:block layout:fragment="javascript-extra"></th:block>
 </body>
